<resources>
    <string name="app_name">On The Road</string>

    <!-- Login & Registration -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_task_description">Leave Help Message…</string>
    <string name="add_button">Post</string>
    <string name="add_task_activity_name">Request Pick !</string>
    <string name="profile_image">User Image</string>
    <string name="logo">logo</string>
    <string name="on_the_road">On The Road</string>
    <string name="show_details">show_details</string>
    <string name="message">Message</string>
    <string name="no_picks">No Picks To Display!</string>
    <string name="network_error">Check Network Connection !</string>
    <string name="logout">Logout</string>
    <string name="add_pick">Add Pick</string>
    <string name="go_add_pick">Go Add Pick</string>
    <string name="posted">Pick successfully Posted !</string>
    <string name="response">Response :</string>
    <string name="error">Error:</string>
    <string name="enter_details">Please enter the credentials!</string>
    <string name="success_register">User successfully registered. Try login now!</string>
    <string name="message_sent">Message Sent !</string>
    <string name="send">Send Message</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="title_activity_maps">Map</string>
    <string name="direction">Direction</string>
    <string name="car_owner_image">Car owner Image</string>
    <string name="location_icon">Location</string>
    <string name="request_help">Request Help</string>
    <string name="post_help_another_car_owners_may_help_you">another car owners may help you!</string>
    <string name="content_authority">com.graduation.a3ltreq.ontheroad</string>
    <string name="sync_account_type">ontheroad.a3ltreq.graduation.com</string>


</resources>
